--- a/templates/item/Custom Jewelry-sheet.html
+++ b/templates/item/Custom Jewelry-sheet.html
@@ -187,13 +187,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.inlay" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.inlay}}
-                                        <option value="none">None</option>
-                                        <option value="simpleCommon">Simple with common materials (CF: 3)</option>
-                                        <option value="simplePrecious">Simple with precious materials (CF: 7.5)</option>
-                                        <option value="extensiveCommon">Extensive with common materials (CF: 8)</option>
-                                        <option value="extensivePrecious">Extensive with precious materials (CF: 20)</option>
-                                        {{/select}}
+                                        {{selectOptions inlayType selected=item.system.jewelryDesign.inlay}}
                                     </select>
                                 </td>
                             </tr>
@@ -205,15 +199,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.gilding" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.gilding}}
-                                        <option value="none">None</option>
-                                        <option value="copperAccent">Copper Accents (CF: 1.5)</option>
-                                        <option value="silverAccent">Silver Accents (CF: 2)</option>
-                                        <option value="goldAccent">Gold Accents (CF: 20)</option>
-                                        <option value="copper">Copper (CF: 4.5)</option>
-                                        <option value="silver">Silver (CF: 6)</option>
-                                        <option value="gold">Gold (CF: 60)</option>
-                                        {{/select}}
+                                        {{selectOptions gildingType selected=item.system.jewelryDesign.gilding}}
                                     </select>
                                 </td>
                             </tr>
@@ -226,11 +212,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.beading" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.beading}}
-                                        <option value="none">None</option>
-                                        <option value="light">Light (CF: 2)</option>
-                                        <option value="extensive">Extensive (CF: 8)</option>
-                                        {{/select}}
+                                        {{selectOptions beadingType selected=item.system.jewelryDesign.beading}}
                                     </select>
                                 </td>
                             </tr>
@@ -241,12 +223,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.dye" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.dye}}
-                                        <option value="none">None</option>
-                                        <option value="simple">Simple (CF: 1.5)</option>
-                                        <option value="common">Common  (CF: 6)</option>
-                                        <option value="expensive">Expensive (CF: 30)</option>
-                                        {{/select}}
+                                        {{selectOptions dyeType selected=item.system.jewelryDesign.dye}}
                                     </select>
                                 </td>
                             </tr>
@@ -257,15 +234,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.embroidery" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.embroidery}}
-                                        <option value="none">None</option>
-                                        <option value="minimal">Minimal (CF: 2)</option>
-                                        <option value="elaborate">Elaborate (CF: 6)</option>
-                                        <option value="minimalSilver">Minimal Cloth of Silver (CF: 6)</option>
-                                        <option value="elaborateSilver">Elaborate Cloth of Silver (CF: 18)</option>
-                                        <option value="minimalGold">Minimal Cloth of Gold (CF: 60)</option>
-                                        <option value="elaborateGold">Elaborate Cloth of Gold (CF: 180)</option>
-                                        {{/select}}
+                                        {{selectOptions embroideryType selected=item.system.jewelryDesign.embroidery}}
                                     </select>
                                 </td>
                             </tr>
@@ -277,15 +246,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.fringe" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.fringe}}
-                                        <option value="none">None</option>
-                                        <option value="common">Common (CF: 1.5)</option>
-                                        <option value="rare">Rare (CF: 4)</option>
-                                        <option value="commonSilver">Common Cloth of Silver (CF: 4.5)</option>
-                                        <option value="rareSilver">Rare Cloth of Silver (CF: 12)</option>
-                                        <option value="commonGold">Common Cloth of Gold (CF: 45)</option>
-                                        <option value="rareGold">Rare Cloth of Gold (CF: 120)</option>
-                                        {{/select}}
+                                        {{selectOptions fringeType selected=item.system.jewelryDesign.fringe}}
                                     </select>
                                 </td>
                             </tr>
@@ -297,12 +258,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.tapestryWeave" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.tapestryWeave}}
-                                        <option value="none">None</option>
-                                        <option value="simple">Simple (CF: 2)</option>
-                                        <option value="complex">Complex (CF: 5)</option>
-                                        <option value="figurative">Figurative (CF: 10)</option>
-                                        {{/select}}
+                                        {{selectOptions tapestryWeaveType selected=item.system.jewelryDesign.tapestryWeave}}
                                     </select>
                                 </td>
                             </tr>
@@ -315,11 +271,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.tapestryDye" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.tapestryDye}}
-                                        <option value="simple">Simple (CF: 0)</option>
-                                        <option value="common">Common (CF: 1)</option>
-                                        <option value="expensive">Expensive (CF: 5)</option>
-                                        {{/select}}
+                                        {{selectOptions tapestryDyeType selected=item.system.jewelryDesign.tapestryDye}}
                                     </select>
                                 </td>
                             </tr>
@@ -332,13 +284,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.figurativePainting" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.figurativePainting}}
-                                        <option value="none">None</option>
-                                        <option value="limitedSimple">Limited Simple (CF: 2)</option>
-                                        <option value="limitedComplex">Limited Complex (CF: 5)</option>
-                                        <option value="extensiveSimple">Extensive Simple (CF: 5)</option>
-                                        <option value="extensiveComplex">Extensive Complex (CF: 10)</option>
-                                        {{/select}}
+                                        {{selectOptions figurativePaintingType selected=item.system.jewelryDesign.figurativePainting}}
                                     </select>
                                 </td>
                             </tr>
@@ -351,13 +297,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.enamel" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.enamel}}
-                                        <option value="none">None</option>
-                                        <option value="limitedSimple">Limited Simple (CF: 2)</option>
-                                        <option value="limitedComplex">Limited Complex (CF: 5)</option>
-                                        <option value="extensiveSimple">Extensive Simple (CF: 5)</option>
-                                        <option value="extensiveComplex">Extensive Complex (CF: 10)</option>
-                                        {{/select}}
+                                        {{selectOptions enamelType selected=item.system.jewelryDesign.enamel}}
                                     </select>
                                 </td>
                             </tr>
@@ -369,11 +309,7 @@
                                 </td>
                                 <td>
                                     <select name="system.jewelryDesign.etching" class="jewelry-decoration-select">
-                                        {{#select item.system.jewelryDesign.etching}}
-                                        <option value="none">None</option>
-                                        <option value="simple">Simple (CF: 1.5)</option>
-                                        <option value="expensive">Expensive (CF: 4)</option>
-                                        {{/select}}
+                                        {{selectOptions etchingType selected=item.system.jewelryDesign.etching}}
                                     </select>
                                 </td>
                             </tr>
