--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -1008,35 +1008,15 @@
                         <td><input type="text" name="system.affliction.{{id}}.desc" value="{{desc}}" title="{{desc}}" style="text-align:left;" /></td>
                         <td class="resource-label">
                             <select name="system.affliction.{{id}}.rangePenalties">
-                                {{#select affliction.rangePenalties}}
-                                <option value="">Make a Selection</option>
-                                <option value="regular">Regular (-1/yard)</option>
-                                <option value="ssrt">Size/Speed/Range Table</option>
-                                <option value="long">Long Distance Penalties</option>
-                                <option value="none">None</option>
-                                {{/select}}
+                                {{selectOptions ../rangeTypes selected=affliction.rangePenalties}}
                             </select>
                         </td>
                         <td style="display: flex; width: 240px" >
                             <select name="system.affliction.{{id}}.resistanceType">
-                                {{#select affliction.resistanceType}}
-                                <option value="">Make a Selection</option>
-                                <option value="contest">Quick Contest</option>
-                                <option value="resistance">Resistance</option>
-                                <option value="irresistible">Irresistible</option>
-                                {{/select}}
+                                {{selectOptions ../resistanceTypes selected=affliction.resistanceType}}
                             </select>
                             <select name="system.affliction.{{id}}.resistanceRoll" class="resistanceRoll">
-                                {{#select affliction.resistanceRoll}}
-                                <option value="">None</option>
-                                <option value="Strength">ST</option>
-                                <option value="Dexterity">DX</option>
-                                <option value="Intelligence">IQ</option>
-                                <option value="Health">HT</option>
-                                <option value="Will">Will</option>
-                                <option value="Perception">Per</option>
-                                <option value="Fright">Fright</option>
-                                {{/select}}
+                                {{selectOptions ../resistanceAttr selected=affliction.resistanceRoll}}
                             </select>
                             <input type="text" placeholder="-0" name="system.affliction.{{id}}.resistanceRollPenalty" value="{{affliction.resistanceRollPenalty}}" title="{{affliction.resistanceRollPenalty}}" style="text-align:left; width: 40px; margin: unset" />
                         </td>
